# altera-ai

./: .env.example  .gitignore  .gitleaks.toml  README.md  package.json  pnpm-lock.yaml  vercel.json
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  render.yaml
apps/api/altera_api/: __init__.py  main.py  quality_config.py  ratelimit.py  supabase_admin.py  version.py
apps/api/altera_api/ai/: __init__.py  batch_classifier.py  batch_prompt.py  batch_schema.py  classifier.py  config.py  fakes.py  nutrition_candidates.py  nutrition_head.py  nutrition_matcher.py  openai_provider.py  policy.py  prompt_builder.py  prompt_input.py  provider.py  pt_guards.py  result_schema.py  wwf_guards.py
apps/api/altera_api/api/: __init__.py  admin.py  classification_job_orchestrator.py  dependencies.py  errors.py  ingestion_job_orchestrator.py  mapping.py  orchestrator.py  pagination.py  routes.py  state.py  store_factory.py  templates.py  workflow.py
apps/api/altera_api/auth/: __init__.py  config.py  dependency.py  errors.py  models.py  verifier.py
apps/api/altera_api/calculation/: __init__.py  protein_tracker.py  wwf.py
apps/api/altera_api/classification_v2/: __init__.py  apply_nevo_v2_plan.py  apply_nevo_v2_protein_split.py  audit_nevo_v2_apply.py  audit_nevo_v2_display_metadata.py  audit_nevo_v2_protein_split.py  backfill_nevo_v2_display_metadata.py  benchmark_nevo_embeddings.py  build_nevo_v2_batch_review_package.py  build_nevo_v2_human_review_workbook.py  check_nevo_v2_apply_readiness.py  compare_nevo_language_specific_retrieval.py  compare_nevo_multilingual_retrieval.py  compare_nevo_multilingual_retrieval_conservative.py  compare_nevo_v1_v2.py  evaluation.py  export_nevo_v2_human_review_artifacts.py  generate_nevo_multilingual_reference.py  models.py  nevo_diagnostics.py  nevo_eval_embeddings.py  nevo_index.py  nevo_matcher.py  nevo_multilingual_conservative.py  nevo_multilingual_reference.py  nevo_nutrition_safety.py  nevo_pipeline.py  nevo_review_workflow.py  nevo_rules.py  nevo_v2_batch_dry_run.py  nevo_v2_enrich.py  nevo_v2_project_batch_dry_run.py  nevo_v2_protein_split.py  nevo_v2_scale_baseline.py  normalize_nevo_v2_human_review_workbook.py  plan_nevo_language_specific_v2_apply.py  plan_nevo_v2_apply.py  print_nevo_v2_review_artifact_manifest.py  propose_nevo_v2_protein_split.py  pt_rules.py  (+8 more)
apps/api/altera_api/comparisons/: engine.py
apps/api/altera_api/demo/: __init__.py  golden_classification.py
apps/api/altera_api/domain/: __init__.py  audit.py  ciqual.py  classification_job.py  common.py  comparison.py  enrichment.py  ingestion_job.py  job.py  nevo.py  organisation.py  product.py  project.py  project_lifecycle.py  protein_tracker.py  recommendation.py  report.py  report_approval.py  report_exports.py  review.py  scenario.py  wwf.py  (+3 more)
apps/api/scripts/: bench_ai_classification.py  benchmark_nevo_embeddings.py  bootstrap_altera_admin.py  build_dataset_100_fixture.py  build_wwf_category_fixture.py  evaluate_nevo_matching.py  evaluate_nevo_voyage.py  evaluate_pt_classification.py  evaluate_quality_v2.py  evaluate_wwf_classification.py  generate_templates.py  import_ciqual.py  import_nevo.py
apps/api/tests/: conftest.py  test_bootstrap.py  test_health.py
(+540 files in other folders)
