[project]
name = "altera-api"
version = "0.0.1"
description = "Altera AI backend API (FastAPI)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Altera AI" }]
license = { text = "Apache-2.0" }

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "python-multipart>=0.0.20",
    "pyjwt[crypto]>=2.9",
    "supabase>=2.9",
    "openai>=2.37.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-PyYAML>=6.0",
]
# Phase Quality-V2-D — OPTIONAL: only needed to run the real Voyage NEVO
# evaluator (scripts/evaluate_nevo_voyage.py). NOT imported by the app
# at runtime (V1 is the default; embeddings are off by default). Install
# with `pip install voyageai` (or `uv pip install -e '.[eval]'`) in the
# shell where you run the real-provider evaluation.
eval = [
    "voyageai>=0.3",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["altera_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
markers = ["integration: requires live Supabase credentials (SUPABASE_URL + SUPABASE_SERVICE_ROLE_KEY)"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Depends() / File() / Form() in default args is intentional.
extend-immutable-calls = ["fastapi.Depends", "fastapi.File", "fastapi.Form"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["altera_api"]

[dependency-groups]
dev = [
    "openpyxl>=3.1.5",
]
